jenkins_deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: plugin-list
          mountPath: /var/jenkins_config
        - name: share-volume
          mountPath: /var/jenkins_plugins
        - name: jenkins-persistent-storage
          mountPath: /var/jenkins_home
      securityContext:
        fsGroup: 1000
      volumes:
      - name: plugin-list
        configMap:
          name: jenkins.plugin
      - name: job-list
        configMap:
          name: jenkins.jobs
      - name: share-volume
        emptyDir: {}
      - name: jenkins-persistent-storage
        persistentVolumeClaim:
          claimName: jenkins-volumeclaim
