jenkins_redirect.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-redirect
spec:
  type: ExternalName
  externalName: jenkins.io
