sonar_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-service
  labels:
    app: sonarqube 
spec:
  type: NodePort
  selector:
    app: sonarqube
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: sonar
