ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: jenkins-service
          servicePort: 80
      - path: /moreinfo/*
        backend:
          serviceName: http-svc
          servicePort: 80
