jenkins_ingress_1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: jenkins-service
          servicePort: 8080
